Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23375

Crash in QV8QObjectConnectionList

    XMLWordPrintable

Details

    Description

      QV8QObjectConnectionList::qt_metacall doesn't handle exceptions, which can result in an ASSERT inside v8 due to unhandled exceptions between function calls.

      import QtQuick 2.0
      
      Item {
          id: root
          property int first: 5
          property int second: 6
      
          Item {
              id: exceptional
      
              function exceptionalFunction() {
                  var obj = undefined;
                  var prop = undefined;
                  return obj[prop]; // cause exception
              }
          }
      
          Component.onCompleted: {
              root["firstChanged"].connect(exceptional.exceptionalFunction);
              root["firstChanged"].connect(exceptional.exceptionalFunction);
              root["firstChanged"].connect(exceptional.exceptionalFunction);
              first = 4;
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes