Handle exceptions inside QV8QObjectConnectionList::qt_metacall

Previously, exceptions were not handled in the connectionlist.
This could cause v8 to assert under certain circumstances.

Task-number: QTBUG-23375
Change-Id: Ie5f043b50bb6b02a77be464ca18ea8e3bbb0f501
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>